--- a/dashboard.html
+++ b/dashboard.html
@@ -34,6 +34,8 @@
 border-right: none;
 padding: 2rem 1.5rem;
 box-shadow: none;
+       display: flex;              /* ADD THIS */
+  flex-direction: column;     /* ADD THIS */
     }
 
     .sidebar-logo {
