--- a/verify.html
+++ b/verify.html
@@ -1031,9 +1031,8 @@
       // Set coordinates
       coords.textContent = `${location.latitude.toFixed(6)}, ${location.longitude.toFixed(6)}`;
 
-      // ✅ FIX #2: Google Maps API - Add your API key here
-      // Get your API key from: https://console.cloud.google.com/google/maps-apis
-      const GOOGLE_MAPS_API_KEY = 'YOUR_API_KEY_HERE'; // ⚠️ REPLACE THIS!
+      // ✅ Google Maps API Key
+      const GOOGLE_MAPS_API_KEY = 'AIzaSyDZQcXMsi4KMnDwvv9aeEkUWDQa9ObqN1U';
       
       if (GOOGLE_MAPS_API_KEY === 'YOUR_API_KEY_HERE') {
         // Fallback: Show static map with link to Google Maps
