--- a/index.html
+++ b/index.html
@@ -349,18 +349,7 @@
 </head>
 <body>
   <!-- Sidebar Navigation -->
-  <nav class="sidebar">
-    <div class="sidebar-logo">
-      <h1>🚚 BizTrack</h1>
-    </div>
-    <ul class="sidebar-nav">
-      <li><a href="index.html" class="active"><i class="fas fa-home"></i> Home</a></li>
-      <li><a href="business.html"><i class="fas fa-briefcase"></i> For Businesses</a></li>
-      <li><a href="verify.html"><i class="fas fa-check-circle"></i> Verify Product</a></li>
-      <li><a href="pricing-public.html"><i class="fas fa-dollar-sign"></i> Pricing</a></li>
-      <li><a href="login.html"><i class="fas fa-user"></i> Login/Signup</a></li>
-    </ul>
-  </nav>
+  <div id="sidebar-container" data-page="home"></div>
 
   <!-- Main Content -->
   <main class="main-content">
