--- a/use-cases.html
+++ b/use-cases.html
@@ -66,7 +66,7 @@
         <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 2rem;">
           
           <!-- Pharmaceutical -->
-          <a href="/use-cases/pharmaceutical.html" style="text-decoration: none; color: inherit;">
+          <a href="/pharmaceutical.html" style="text-decoration: none; color: inherit;">
             <div class="industry-card" style="background: white; padding: 2.5rem; border-radius: 16px; border: 2px solid #e2e8f0; transition: all 0.3s; cursor: pointer; height: 100%;">
               <div style="font-size: 4rem; margin-bottom: 1rem;">💊</div>
               <h3 style="font-size: 1.75rem; font-weight: 700; margin-bottom: 1rem; color: #0f172a;">Pharmaceutical Compliance</h3>
@@ -80,7 +80,7 @@
           </a>
 
           <!-- Cannabis -->
-          <a href="/use-cases/cannabis.html" style="text-decoration: none; color: inherit;">
+          <a href="/cannabis.html" style="text-decoration: none; color: inherit;">
             <div class="industry-card" style="background: white; padding: 2.5rem; border-radius: 16px; border: 2px solid #e2e8f0; transition: all 0.3s; cursor: pointer; height: 100%;">
               <div style="font-size: 4rem; margin-bottom: 1rem;">🌿</div>
               <h3 style="font-size: 1.75rem; font-weight: 700; margin-bottom: 1rem; color: #0f172a;">Cannabis Manufacturing</h3>
@@ -94,7 +94,7 @@
           </a>
 
           <!-- Luxury Goods -->
-          <a href="/use-cases/luxury.html" style="text-decoration: none; color: inherit;">
+          <a href="/luxury.html" style="text-decoration: none; color: inherit;">
             <div class="industry-card" style="background: white; padding: 2.5rem; border-radius: 16px; border: 2px solid #e2e8f0; transition: all 0.3s; cursor: pointer; height: 100%;">
               <div style="font-size: 4rem; margin-bottom: 1rem;">💎</div>
               <h3 style="font-size: 1.75rem; font-weight: 700; margin-bottom: 1rem; color: #0f172a;">Luxury Goods Authentication</h3>
@@ -108,7 +108,7 @@
           </a>
 
           <!-- Food & Beverage -->
-          <a href="/use-cases/food.html" style="text-decoration: none; color: inherit;">
+          <a href="/food.html" style="text-decoration: none; color: inherit;">
             <div class="industry-card" style="background: white; padding: 2.5rem; border-radius: 16px; border: 2px solid #e2e8f0; transition: all 0.3s; cursor: pointer; height: 100%;">
               <div style="font-size: 4rem; margin-bottom: 1rem;">🍔</div>
               <h3 style="font-size: 1.75rem; font-weight: 700; margin-bottom: 1rem; color: #0f172a;">Food & Beverage Safety</h3>
@@ -122,7 +122,7 @@
           </a>
 
           <!-- Electronics -->
-          <a href="/use-cases/electronics.html" style="text-decoration: none; color: inherit;">
+          <a href="/electronics.html" style="text-decoration: none; color: inherit;">
             <div class="industry-card" style="background: white; padding: 2.5rem; border-radius: 16px; border: 2px solid #e2e8f0; transition: all 0.3s; cursor: pointer; height: 100%;">
               <div style="font-size: 4rem; margin-bottom: 1rem;">📱</div>
               <h3 style="font-size: 1.75rem; font-weight: 700; margin-bottom: 1rem; color: #0f172a;">Electronics Anti-Counterfeiting</h3>
