--- a/use-cases.html
+++ b/use-cases.html
@@ -512,7 +512,7 @@
         <div class="industries-grid">
           
           <!-- Pharmaceutical -->
-          <a href="use-cases-pharma.html" class="industry-card">
+          <a href="pharmaceutical.html" class="industry-card">
             <div class="industry-icon">💊</div>
             <h3>Pharmaceutical Compliance</h3>
             <p>
@@ -524,7 +524,7 @@
           </a>
 
           <!-- Cannabis -->
-          <a href="use-cases-cannabis.html" class="industry-card">
+          <a href="cannabis.html" class="industry-card">
             <div class="industry-icon">🌿</div>
             <h3>Cannabis Manufacturing</h3>
             <p>
@@ -536,7 +536,7 @@
           </a>
 
           <!-- Luxury Goods -->
-          <a href="use-cases-luxury.html" class="industry-card">
+          <a href="luxury.html" class="industry-card">
             <div class="industry-icon">💎</div>
             <h3>Luxury Goods Authentication</h3>
             <p>
@@ -548,7 +548,7 @@
           </a>
 
           <!-- Food & Beverage -->
-          <a href="use-cases-food.html" class="industry-card">
+          <a href="food.html" class="industry-card">
             <div class="industry-icon">🍔</div>
             <h3>Food & Beverage Safety</h3>
             <p>
@@ -560,7 +560,7 @@
           </a>
 
           <!-- Electronics -->
-          <a href="use-cases-electronics.html" class="industry-card">
+          <a href="electronics.html" class="industry-card">
             <div class="industry-icon">📱</div>
             <h3>Electronics Anti-Counterfeiting</h3>
             <p>
@@ -591,9 +591,9 @@
         <!-- Contact Info (Hidden by default) -->
         <div id="contactInfo" class="contact-info">
           <div class="contact-links">
-            <a href="mailto:info@biztrack.io" class="contact-link">
+            <a href="/cdn-cgi/l/email-protection#cba2a5ada48ba9a2b1bfb9aaa8a0e5a2a4" class="contact-link">
               <i class="fas fa-envelope"></i>
-              <span style="font-weight: 600;">info@biztrack.io</span>
+              <span style="font-weight: 600;"><span class="__cf_email__" data-cfemail="d7beb9b1b897b5beada3a5b6b4bcf9beb8">[email&#160;protected]</span></span>
             </a>
             <a href="tel:+13606700852" class="contact-link">
               <i class="fas fa-phone"></i>
@@ -627,21 +627,11 @@
     </div>
   </footer>
 
-  <script>
+  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
     function toggleContact() {
       const contactInfo = document.getElementById('contactInfo');
       const contactBtn = document.getElementById('contactBtn');
       
       if (contactInfo.style.display === 'none' || contactInfo.style.display === '') {
         contactInfo.style.display = 'block';
-        contactBtn.innerHTML = '<i class="fas fa-times"></i> Close';
-      } else {
-        contactInfo.style.display = 'none';
-        contactBtn.innerHTML = '<i class="fas fa-envelope"></i> Contact Us';
-      }
-    }
-  </script>
-
-  <script src="/js/sidebar.js"></script>
-</body>
-</html>
+        contactBtn.innerHTML = '<i class="fas fa-tim
