--- a/luxury.html
+++ b/luxury.html
@@ -89,6 +89,53 @@
       min-height: 100vh;
     }
 
+    /* Breadcrumb Navigation */
+    .breadcrumb {
+      background: white;
+      padding: 1rem 2rem;
+      border-bottom: 1px solid #e2e8f0;
+      margin-left: 260px;
+      position: sticky;
+      top: 0;
+      z-index: 999;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+    }
+
+    .breadcrumb-content {
+      max-width: 1200px;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      font-size: 0.95rem;
+      color: #64748b;
+    }
+
+    .breadcrumb-link {
+      color: #6366f1;
+      text-decoration: none;
+      font-weight: 500;
+      transition: all 0.2s;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+
+    .breadcrumb-link:hover {
+      color: #4338ca;
+      text-decoration: underline;
+    }
+
+    .breadcrumb-separator {
+      color: #cbd5e1;
+      margin: 0 0.25rem;
+    }
+
+    .breadcrumb-current {
+      color: #0f172a;
+      font-weight: 600;
+    }
+
     /* Hero Section - Luxury Purple Theme */
     .hero {
       background: linear-gradient(135deg, #6366f1 0%, #4338ca 100%);
@@ -618,6 +665,18 @@
 
   <!-- Main Content -->
   <main class="main-content">
+    
+    <!-- Breadcrumb Navigation -->
+    <nav class="breadcrumb">
+      <div class="breadcrumb-content">
+        <a href="use-cases.html#industries" class="breadcrumb-link">
+          <i class="fas fa-arrow-left"></i>
+          Use Cases
+        </a>
+        <span class="breadcrumb-separator">/</span>
+        <span class="breadcrumb-current">Luxury Goods Authentication</span>
+      </div>
+    </nav>
     
     <!-- Hero Section -->
     <section class="hero">
