--- a/use-cases.html
+++ b/use-cases.html
@@ -501,7 +501,7 @@
     </section>
 
     <!-- Industry Cards Section -->
-    <section class="industries">
+    <section id="industries" class="industries">
       <div class="industries-container">
         <h2>Sectors Where We Specialize</h2>
         <p class="industries-intro">
