--- a/register.html
+++ b/register.html
@@ -39,9 +39,18 @@
       margin-bottom: 2rem;
     }
 
-    .logo img {
-      max-width: 180px;
-      height: auto;
+    .logo h1 {
+      font-size: 2.5rem;
+      font-weight: 800;
+      color: #1E293B;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.5rem;
+    }
+
+    .logo-emoji {
+      font-size: 2.5rem;
     }
 
     h1 {
@@ -188,13 +197,17 @@
       h1 {
         font-size: 1.5rem;
       }
+
+      .logo h1 {
+        font-size: 2rem;
+      }
     }
   </style>
 </head>
 <body>
   <div class="register-container">
     <div class="logo">
-      <img src="assets/8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack Logo">
+      <h1><span class="logo-emoji">🚚</span> BizTrack</h1>
     </div>
 
     <h1>Create Your Account</h1>
