--- a/pricing-hub.html
+++ b/pricing-hub.html
@@ -401,4 +401,11 @@
   <footer class="footer">
     <div class="footer-content">
       <div class="footer-copyright">
-        <p>&copy; 2025 BizTra
+        <p>&copy; 2025 BizTrack - Built by Aventra LLC | Powered by XRPL</p>
+      </div>
+    </div>
+  </footer>
+
+  <script src="js/sidebar.js"></script>
+</body>
+</html>
