--- a/pricing-pharma.html
+++ b/pricing-pharma.html
@@ -477,4 +477,12 @@
   </main>
 
   <!-- Footer -->
-  <footer class="footer"
+  <footer class="footer">
+    <div class="footer-copyright">
+      <p>&copy; 2025 BizTrack - Built by Aventra LLC | Powered by XRPL | FDA-Ready Since Day One</p>
+    </div>
+  </footer>
+
+  <script src="js/sidebar.js"></script>
+</body>
+</html>
